# rust-demo-project

./: .env.example  .gitignore  Cargo.toml  README.md
src/: db.rs  error.rs  main.rs  pdf.rs
src/auth/: jwt.rs  middleware.rs
src/handlers/: auth.rs  invoices.rs  mod.rs
src/models/: invoice.rs  user.rs
