[package]
name = "rust-invoice-api"
version = "0.1.0"
edition = "2021"
description = "Invoice API with authentication"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
bcrypt = "0.15"

# API Documentation
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenv = "0.15"
thiserror = "1"
validator = { version = "0.16", features = ["derive"] }
once_cell = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PDF Generation
printpdf = "0.7"

[dev-dependencies]
actix-rt = "2"
